🐛 Fix overflow on zoom

--- a/app/globals.css
+++ b/app/globals.css
@@ -479,7 +479,7 @@
   }
 
   .file-picker-input {
-    @apply sr-only;
+    display: none;
   }
 
   .file-picker-name {
